update cards to custom-cards. upload new images. added brands section

--- a/index.html
+++ b/index.html
@@ -85,70 +85,142 @@
         <img class="category" src="./images/men/black-shoes.jpg" alt="category-men">
         <img class="category" src="./images/women/faux-fur-scarf.jpg" alt="category-men">
       </section>
+      <div>
+        <h2>Fall Into The New</h2>
+        <p>It's everybody's favorite season for stepping out in amazing fits-pretty statement sweaters, sexy denim and
+          all the cute shoes and boots. So go ahead-fall in!</p>
+      </div>
       <section class="top-offers col-12">
-        <h2 class="title">Amazing offers!</h2>
+        <h2 class="title">Now trending!</h2>
+
         <section class="offers">
-          <article class="card">
-            <img class="card__picture" src="../images/men/squared-shirt.jpg" alt="offer-mockup-1">
-            <h3>GG Marmont reversible belt</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
-          </article>
-          <article class="card">
-            <img class="card__picture" src="../images/women/short.jpg" alt="offer-mockup-2">
-            <h3>Waisted Smokin' Short Fray</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
-          </article>
-          <article class="card">
-            <img class="card__picture" src="../images/men/squared-coat.jpg" alt="offer-mockup-3">
-            <h3>Orange Stripe's Squared Coat</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
-          </article>
-          <article class="card">
-            <img class="card__picture" src="../images/women/modern-jean.jpg" alt="offer-mockup-4">
-            <h3>Jeans In Vintage Mid Blue</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
-          </article>
-          <article class="card">
-            <img class="card__picture" src="../images/men/short-shirt.jpg" alt="offer-mockup-5">
-            <h3>Regular Fit Ellerslie Linen Shirt</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
-          </article>
-          <article class="card">
-            <img class="card__picture" src="../images/women/knotted-shirt.jpg" alt="offer-mockup-6">
-            <h3>Striped Print T-Shirt</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
-          </article>
-          <article class="card">
-            <img class="card__picture" src="../images/men/brooklyn-jacket.jpg" alt="offer-mockup-7">
-            <h3>Classic Brooklyn Red Jacket</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
-          </article>
-          <article class="card">
-            <img class="card__picture" src="../images/women/jean.jpg" alt="offer-mockup-7">
-            <h3>Jeans In Mid Blue With Rips</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
-          </article>
-          <article class="card">
-            <img class="card__picture" src="../images/men/black-shoes.jpg" alt="offer-mockup-7">
-            <h3>Black Leather's Classic Chelsea Boot</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
-          </article>
-          <article class="card">
-            <img class="card__picture" src="../images/women/gardener-clothes.jpg" alt="offer-mockup-7">
-            <h3>Vintage Blue Pocket Overall</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
+
+          <div class="row">
+            <div class="col-lg-4 col-md-12 mb-4">
+              <article class="card custom-card" style="max-height: 480px;">
+                <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
+                  <img src="../images/men/squared-coat.jpg" alt="squared-coat">
+                </div>
+                <div class="card__body">
+                  <h5>
+                    <span class="badge bg-success ms-2">Eco</span><span class="badge bg-danger ms-2">-10%</span>
+                  </h5>
+                  <h5 class="card-title mb-3">Orange Stripe's Squared Coat</h5>
+                  <p>Category</p>
+                  <h6 class="mb-3">
+                    <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
+                  </h6>
+                </div>
+              </article>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mb-4">
+              <article class="card custom-card" style="max-height: 480px;">
+                <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
+                  data-mdb-ripple-color="light">
+                  <img src="../images/women/faux-fur-scarf.jpg" alt="faux-fur-scarf">
+                </div>
+                <div class="card__body">
+                  <h5>
+                    <span class="badge bg-primary ms-2">New</span><span class="badge bg-success ms-2">Eco</span><span
+                      class="badge bg-danger ms-2">-10%</span>
+                  </h5>
+                  <h5 class="card-title mb-3">Faux Fur Scarf</h5>
+                  <p>Category</p>
+                  <h6 class="mb-3">$61.99</h6>
+                </div>
+              </article>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mb-4">
+              <article class="card custom-card" style="max-height: 480px;">
+                <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
+                  <img src="../images/men/squared-shirt.jpg" alt="squared-shirt">
+                </div>
+                <div class="card__body">
+                  <h5>
+                    <span class="badge bg-primary ms-2">New</span><span class="badge bg-success ms-2">Eco</span><span
+                      class="badge bg-danger ms-2">-10%</span>
+                  </h5>
+                  <h5 class="card-title mb-3">GG Marmont reversible belt</h5>
+                  <p>Category</p>
+                  <h6 class="mb-3">
+                    <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
+                  </h6>
+                </div>
+              </article>
+            </div>
+          </div>
+
+
+          <div class="row">
+            <div class="col-lg-4 col-md-12 mb-4">
+              <article class="card custom-card" style="max-height: 480px;">
+                <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
+                  data-mdb-ripple-color="light">
+                  <img src="../images/women/modern-jean.jpg" alt="modern-jean">
+                </div>
+                <div class="card__body">
+                  <h5><span class="badge bg-primary ms-2">New</span></h5>
+                  <h5 class="card-title mb-3">Jeans In Vintage Mid Blue</h5>
+                  <p>Category</p>
+                  <h6 class="mb-3">$61.99</h6>
+                </div>
+              </article>
+            </div>
+
+
+
+            <div class="col-lg-4 col-md-6 mb-4">
+              <article class="card custom-card" style="max-height: 480px;">
+                <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
+                  data-mdb-ripple-color="light">
+                  <img src="../images/men/short-shirt.jpg" alt="short-shirt">
+                </div>
+                <div class="card__body">
+                  <h5><span class="badge bg-success ms-2">Eco</span></h5>
+                  <h5 class="card-title mb-3">Regular Fit Ellerslie Linen Shirt</h5>
+                  <p>Category</p>
+                  <h6 class="mb-3">$61.99</h6>
+                </div>
+              </article>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mb-4">
+              <article class="card custom-card" style="max-height: 480px;">
+                <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
+                  <img src="../images/women/short.jpg" alt="short">
+                </div>
+                <div class="card__body">
+                  <h5><span class="badge bg-danger ms-2">-10%</span></h5>
+                  <h5 class="card-title mb-3">Waisted Smokin' Short Fray</h5>
+                  <p>Category</p>
+                  <h6 class="mb-3">
+                    <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
+                  </h6>
+                </div>
+              </article>
+            </div>
+          </div>
+
+        </section>
+
+        <section class="trending-brands">
+          <h3>TRENDING BRANDS</h3>
+          <article class="trending-brands__logos">
+            <ul>
+              <li><img src="./images/trending-brands/collusion.webp" alt="collusion"></li>
+              <li><img src="./images/trending-brands/monkl.webp" alt="monkl"></li>
+              <li><img src="./images/trending-brands/never-fully-dressed.png" alt="never-fully-dressed"></li>
+              <li><img src="./images/trending-brands/reclaimed-vintage.avif" alt="reclaimed-vintage"></li>
+              <li><img src="./images/trending-brands/topshop.png" alt="topshop"></li>
+              <li><img src="./images/trending-brands/weekday.webp" alt="weekday"></li>
+            </ul>
           </article>
         </section>
+
+
+
       </section>
     </div>
   </main>
