--- a/pages/Offers.html
+++ b/pages/Offers.html
@@ -39,38 +39,68 @@
   <section class="banner"></section>
   <main class="container">
     <h2 class="title">Offers</h2>
-    <div class="row">
-      <section class="offers col-12">
-        <article class="card">
-          <img class="card__picture" src="../images/women/gardener-clothes.jpg" alt="offer-mockup-1">
-          <h3 class="card__product-name">Vintage Blue Pocket Overall</h3>
-          <p class="card__product-price">$300</p>
-          <p class="card__product-fees">3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/men/black&white-stripes.jpg" alt="offer-mockup-2">
-          <h3 class="card__product-name">Black & White Stripes Shirt</h3>
-          <p class="card__product-price">$300</p>
-          <p class="card__product-fees">3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/women/jean.jpg" alt="offer-mockup-3">
-          <h3 class="card__product-name">Jeans In Mid Blue With Rips</h3>
-          <p class="card__product-price">$300</p>
-          <p class="card__product-fees">3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/men/black-shoes.jpg" alt="offer-mockup-4">
-          <h3 class="card__product-name">Black Leather's Classic Chelsea Boot</h3>
-          <p class="card__product-price">$300</p>
-          <p class="card__product-fees">3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/women/knotted-shirt.jpg" alt="offer-mockup-5">
-          <h3 class="card__product-name">Striped Print T-Shirt</h3>
-          <p class="card__product-price">$300</p>
-          <p class="card__product-fees">3 interest-free fees of $300</p>
-        </article>
+    <!-- <div>
+      <section class="offers">
+
+          <article class="card">
+            <div class="card__picture">
+              <img src="../images/women/gardener-clothes.jpg" alt="offer-mockup-1">
+            </div>
+            <div class="card__product">
+              <h3 class="card__product-name">Vintage Blue Pocket Overall</h3>
+              <p class="card__product-price">$300</p>
+              <p class="card__product-fees">3 interest-free fees of $300</p>
+            </div>
+          </article>
+
+        <div class="cards_item">
+          <article class="card">
+            <div class="card__picture">
+              <img class="card__picture" src="../images/men/black&white-stripes.jpg" alt="offer-mockup-2">
+            </div>
+            <div class="card__product">
+              <h3 class="card__product-name">Black & White Stripes Shirt</h3>
+              <p class="card__product-price">$300</p>
+              <p class="card__product-fees">3 interest-free fees of $300</p>
+            </div>
+          </article>
+        </div>
+        <div class="cards_item">
+          <article class="card">
+            <div class="card__picture">
+              <img class="card__picture" src="../images/women/jean.jpg" alt="offer-mockup-3">
+            </div>
+            <div class="card__product">
+              <h3 class="card__product-name">Jeans In Mid Blue With Rips</h3>
+              <p class="card__product-price">$300</p>
+              <p class="card__product-fees">3 interest-free fees of $300</p>
+            </div>
+          </article>
+        </div>
+        <div class="cards_item">
+          <article class="card">
+            <div class="card__picture">
+              <img class="card__picture" src="../images/men/black-shoes.jpg" alt="offer-mockup-4">
+            </div>
+            <div class="card__product">
+              <h3 class="card__product-name">Black Leather's Classic Chelsea Boot</h3>
+              <p class="card__product-price">$300</p>
+              <p class="card__product-fees">3 interest-free fees of $300</p>
+            </div>
+          </article>
+        </div>
+        <div class="cards_item">
+          <article class="card">
+            <div class="card__picture">
+              <img class="card__picture" src="../images/women/knotted-shirt.jpg" alt="offer-mockup-5">
+            </div>
+            <div class="card__product">
+              <h3 class="card__product-name">Striped Print T-Shirt</h3>
+              <p class="card__product-price">$300</p>
+              <p class="card__product-fees">3 interest-free fees of $300</p>
+            </div>
+          </article>
+        </div>
         <article class="card">
           <img class="card__picture" src="../images/men/brooklyn-jacket.jpg" alt="offer-mockup-6">
           <h3 class="card__product-name">Classic Brooklyn Red Jacket</h3>
@@ -114,7 +144,225 @@
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
       </section>
-    </div>
+    </div> -->
+
+
+
+    <section class="offers">
+      <div class="row">
+        <div class="col-lg-4 col-md-12 mb-4">
+          <article class="card custom-card" style="max-height: 480px;">
+            <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
+              data-mdb-ripple-color="light">
+              <img src="../images/women/gardener-clothes.jpg" alt="gardener-clothes" class="w-100" />
+            </div>
+            <div class="card__body">
+              <h5><span class="badge bg-primary ms-2">New</span></h5>
+              <h5 class="card-title mb-3">Vintage Blue Pocket Overall</h5>
+              <p>Category</p>
+              <h6 class="mb-3">$61.99</h6>
+            </div>
+          </article>
+        </div>
+
+        <div class="col-lg-4 col-md-6 mb-4">
+          <article class="card custom-card" style="max-height: 480px;">
+            <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
+              data-mdb-ripple-color="light">
+              <img src="../images/men/black-white-stripes.jpg" alt="black-white-stripes" class="w-100" />
+            </div>
+            <div class="card__body">
+              <h5><span class="badge bg-success ms-2">Eco</span></h5>
+              <h5 class="card-title mb-3">Black & White Stripes Shirt</h5>
+              <p>Category</p>
+              <h6 class="mb-3">$61.99</h6>
+            </div>
+          </article>
+        </div>
+
+        <div class="col-lg-4 col-md-6 mb-4">
+          <article class="card custom-card" style="max-height: 480px;">
+            <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
+              <img src="../images/women/jean.jpg" alt="jean" class="w-100" />
+            </div>
+            <div class="card__body">
+              <h5><span class="badge bg-danger ms-2">-10%</span></h5>
+              <h5 class="card-title mb-3">Jeans In Mid Blue With Rips</h5>
+              <p>Category</p>
+              <h6 class="mb-3">
+                <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
+              </h6>
+            </div>
+          </article>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4 col-md-12 mb-4">
+          <article class="card custom-card" style="max-height: 480px;">
+            <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
+              <img src="../images/men/black-shoes.jpg" alt="black-shoes" class="w-100" />
+            </div>
+            <div class="card__body">
+              <h5>
+                <span class="badge bg-success ms-2">Eco</span><span class="badge bg-danger ms-2">-10%</span>
+              </h5>
+              <h5 class="card-title mb-3">Black Classic Chelsea Sholders</h5>
+              <p>Category</p>
+              <h6 class="mb-3">
+                <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
+              </h6>
+            </div>
+          </article>
+        </div>
+
+        <div class="col-lg-4 col-md-6 mb-4">
+          <article class="card custom-card" style="max-height: 480px;">
+            <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
+              data-mdb-ripple-color="light">
+              <img src="../images/women/knotted-shirt.jpg" alt="knotted-shirt" class="w-100" />
+            </div>
+            <div class="card__body">
+              <h5>
+                <span class="badge bg-primary ms-2">New</span><span class="badge bg-success ms-2">Eco</span><span
+                  class="badge bg-danger ms-2">-10%</span>
+              </h5>
+              <h5 class="card-title mb-3">Striped Print T-Shirt</h5>
+              <p>Category</p>
+              <h6 class="mb-3">$61.99</h6>
+            </div>
+          </article>
+        </div>
+
+        <div class="col-lg-4 col-md-6 mb-4">
+          <article class="card custom-card" style="max-height: 480px;">
+            <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
+              <img src="../images/men/brooklyn-jacket.jpg" alt="brooklyn-jacket" class="w-100" />
+            </div>
+            <div class="card__body">
+              <h5>
+                <span class="badge bg-primary ms-2">New</span><span class="badge bg-success ms-2">Eco</span><span
+                  class="badge bg-danger ms-2">-10%</span>
+              </h5>
+              <h5 class="card-title mb-3">Classic Brooklyn Red Jacket</h5>
+              <p>Category</p>
+              <h6 class="mb-3">
+                <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
+              </h6>
+            </div>
+          </article>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4 col-md-12 mb-4">
+          <article class="card custom-card" style="max-height: 480px;">
+            <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
+              data-mdb-ripple-color="light">
+              <img src="../images/women/modern-jean.jpg" alt="modern-jean">
+            </div>
+            <div class="card__body">
+              <h5><span class="badge bg-primary ms-2">New</span></h5>
+              <h5 class="card-title mb-3">Jeans In Vintage Mid Blue</h5>
+              <p>Category</p>
+              <h6 class="mb-3">$61.99</h6>
+            </div>
+          </article>
+        </div>
+
+
+
+        <div class="col-lg-4 col-md-6 mb-4">
+          <article class="card custom-card" style="max-height: 480px;">
+            <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
+              data-mdb-ripple-color="light">
+              <img src="../images/men/short-shirt.jpg" alt="short-shirt">
+            </div>
+            <div class="card__body">
+              <h5><span class="badge bg-success ms-2">Eco</span></h5>
+              <h5 class="card-title mb-3">Regular Fit Ellerslie Linen Shirt</h5>
+              <p>Category</p>
+              <h6 class="mb-3">$61.99</h6>
+            </div>
+          </article>
+        </div>
+
+        <div class="col-lg-4 col-md-6 mb-4">
+          <article class="card custom-card" style="max-height: 480px;">
+            <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
+              <img src="../images/women/short.jpg" alt="short">
+            </div>
+            <div class="card__body">
+              <h5><span class="badge bg-danger ms-2">-10%</span></h5>
+              <h5 class="card-title mb-3">Waisted Smokin' Short Fray</h5>
+              <p>Category</p>
+              <h6 class="mb-3">
+                <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
+              </h6>
+            </div>
+          </article>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4 col-md-12 mb-4">
+          <article class="card custom-card" style="max-height: 480px;">
+            <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
+              <img src="../images/men/squared-coat.jpg" alt="squared-coat">
+            </div>
+            <div class="card__body">
+              <h5>
+                <span class="badge bg-success ms-2">Eco</span><span class="badge bg-danger ms-2">-10%</span>
+              </h5>
+              <h5 class="card-title mb-3">Orange Stripe's Squared Coat</h5>
+              <p>Category</p>
+              <h6 class="mb-3">
+                <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
+              </h6>
+            </div>
+          </article>
+        </div>
+
+        <div class="col-lg-4 col-md-6 mb-4">
+          <article class="card custom-card" style="max-height: 480px;">
+            <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
+              data-mdb-ripple-color="light">
+              <img src="../images/women/faux-fur-scarf.jpg" alt="faux-fur-scarf">
+            </div>
+            <div class="card__body">
+              <h5>
+                <span class="badge bg-primary ms-2">New</span><span class="badge bg-success ms-2">Eco</span><span
+                  class="badge bg-danger ms-2">-10%</span>
+              </h5>
+              <h5 class="card-title mb-3">Faux Fur Scarf</h5>
+              <p>Category</p>
+              <h6 class="mb-3">$61.99</h6>
+            </div>
+          </article>
+        </div>
+
+        <div class="col-lg-4 col-md-6 mb-4">
+          <article class="card custom-card" style="max-height: 480px;">
+            <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
+              <img src="../images/men/squared-shirt.jpg" alt="squared-shirt">
+            </div>
+            <div class="card__body">
+              <h5>
+                <span class="badge bg-primary ms-2">New</span><span class="badge bg-success ms-2">Eco</span><span
+                  class="badge bg-danger ms-2">-10%</span>
+              </h5>
+              <h5 class="card-title mb-3">GG Marmont reversible belt</h5>
+              <p>Category</p>
+              <h6 class="mb-3">
+                <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
+              </h6>
+            </div>
+          </article>
+        </div>
+      </div>
+
+    </section>
+
   </main>
   <footer class="footer">
     <div class="footer__info">
