--- a/pages/Women.html
+++ b/pages/Women.html
@@ -45,7 +45,7 @@
     <div class="swiper-button-prev"></div>
     <section class="swiper mySwiper">
       <div class="swiper-wrapper">
-        <article class="swiper-slide">
+        <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/brown-outfit.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
@@ -59,7 +59,7 @@
             </div>
           </div>
         </article>
-        <article class="swiper-slide">
+        <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/gardener-clothes.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
@@ -73,7 +73,7 @@
             </div>
           </div>
         </article>
-        <article class="swiper-slide">
+        <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/jean.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
@@ -87,7 +87,7 @@
             </div>
           </div>
         </article>
-        <article class="swiper-slide">
+        <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/knotted-shirt.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
@@ -101,7 +101,7 @@
             </div>
           </div>
         </article>
-        <article class="swiper-slide">
+        <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/modern-jean.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
@@ -115,7 +115,7 @@
             </div>
           </div>
         </article>
-        <article class="swiper-slide">
+        <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/short.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
@@ -129,7 +129,7 @@
             </div>
           </div>
         </article>
-        <article class="swiper-slide">
+        <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/faux-fur-scarf.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
@@ -168,11 +168,11 @@
       </div>
     </section>
     <section class="announcements">
-      <div class="announcements__item">
+      <div class="announcements__item announcements__item-first">
         <h3>6 interest-free fees</h3>
         <h3>All banks</h3>
       </div>
-      <div class="announcements__item">
+      <div class="announcements__item announcements__item-second">
         <h3>Shipping all over the country</h3>
         <h3>Calculate your shipment!</h3>
       </div>
