--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
   <main class="container">
     <div class="row">
       <section class="categories col-12">
-        <img class="category" src="./images/women/gardener-clothes.jpg" alt="category-women">
-        <img class="category" src="./images/men/black&white-stripes.jpg" alt="catogory-men">
-        <img class="category" src="./images/men/black-shoes.jpg" alt="category-men">
-        <img class="category" src="./images/women/faux-fur-scarf.jpg" alt="category-men">
+        <img class="category" src="./images/women/gardener-clothes.jpg" alt="gardener-clothes">
+        <img class="category" src="./images/men/black-white-stripes.jpg" alt="black-white-stripes">
+        <img class="category" src="./images/men/black-shoes.jpg" alt="black-shoes">
+        <img class="category" src="./images/women/faux-fur-scarf.jpg" alt="faux-fur-scarf">
       </section>
       <div>
         <h2>Fall Into The New</h2>
@@ -91,7 +91,7 @@
           all the cute shoes and boots. So go ahead-fall in!</p>
       </div>
       <section class="top-offers col-12">
-        <h2 class="title">Now trending!</h2>
+        <h2 class="title">Top Offers!</h2>
 
         <section class="offers">
 
