--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -39,16 +39,8 @@
   <div class="container">
     <main>
       <h2 class="title">Contact</h2>
-      <div class="row">
+      <div>
         <section class="contact">
-          <div class=" col-4">
-            <div class="contact__address">
-              <p style="padding: 50px">345 Jackson Blvd Ste 1020 Chicago
-                IL 60604-2340</p>
-            </div>
-          </div>
-
-          <div class=" col-8">
             <form class="contact__form" action="" method="post">
               <div class="mb-3">
                 <label for="fullName" class="form-label">Fullname</label>
@@ -66,7 +58,12 @@
                 <button type="submit" class="btn btn-primary">Submit</button>
               </div>
             </form>
-          </div>
+
+            <div class="contact__address">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1737.6221882978507!2d-98.48650795000005!3d29.421653200000023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865c58aa57e6a56f%3A0xf08a9ad66f03e879!2sHenry+B.+Gonzalez+Convention+Center!5e0!3m2!1sen!2sus!4v1393884854786"
+                width="500" height="350" frameborder="0" style="border:0"></iframe>
+            </div>
 
         </section>
       </div>
