update slider and methods images

--- a/pages/Men.html
+++ b/pages/Men.html
@@ -40,13 +40,13 @@
   <h1 class="clipped">Cheapestore</h1>
   <section class="banner"></section>
   <main class="container">
-    <h2 class="title">Men</h2>
+    <h2 class="title">MEN</h2>
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
     <section class="swiper mySwiper">
       <div class="swiper-wrapper">
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/men/black&white-stripes.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/men/black-white-stripes.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
               <h3>Black & White Stripes Shirt</h3>
@@ -183,12 +183,13 @@
       <section class="methods">
         <article class="methods__payment">
           <h3>Payment Methods</h3>
-          <h4>VISA</h4>
-          <h4>MERCADOPAGO</h4>
+          <img src="../images/visa.svg" alt="visa" style="width: 80px;">
+          <img src="../images/mercado-pago.svg" alt="mercado-pago" style="width: 120px;">
         </article>
+        <br>
         <article class="methods_shipping">
           <h3>Shipping</h3>
-          <h4>CORREO ARGENTINO</h4>
+          <img src="../images/correo-argentino.png" alt="correo-argentino"  style="width: 110px;">
         </article>
       </section>
       <section class="social">
