--- a/pages/Women.html
+++ b/pages/Women.html
@@ -40,7 +40,7 @@
   <h1 class="clipped">Cheapestore</h1>
   <section class="banner"></section>
   <main class="container">
-    <h2 class="title">Women</h2>
+    <h2 class="title">WOMEN</h2>
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
     <section class="swiper mySwiper">
@@ -183,12 +183,13 @@
       <section class="methods">
         <article class="methods__payment">
           <h3>Payment Methods</h3>
-          <h4>VISA</h4>
-          <h4>MERCADOPAGO</h4>
+          <img src="../images/visa.svg" alt="visa" style="width: 80px;">
+          <img src="../images/mercado-pago.svg" alt="mercado-pago" style="width: 120px;">
         </article>
+        <br>
         <article class="methods_shipping">
           <h3>Shipping</h3>
-          <h4>CORREO ARGENTINO</h4>
+          <img src="../images/correo-argentino.png" alt="correo-argentino"  style="width: 110px;">
         </article>
       </section>
       <section class="social">
