--- a/index.html
+++ b/index.html
@@ -45,25 +45,26 @@
       <li data-bs-target="#myCarousel" data-bs-slide-to="2"></li>
     </ol>
     <div class="carousel-inner">
-      <div class="carousel-item active">
+      <div class="carousel-item">
         <img class="d-block w-100" src="./images/slider/slider-off.gif" alt="">
         <div class="carousel-caption d-none d-md-block">
-          <h2>First slide label</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <h2 class="bordered-title">HOLIDAY SHOP</h2>
+          <p class="bordered-paragraph">Shop our best selling holiday and beachwear collection.</p>
         </div>
       </div>
+
       <div class="carousel-item">
         <img class="d-block w-100" src="./images/slider/slider-sale.gif" alt="">
         <div class="carousel-caption">
-          <h2>Second slide label</h2>
-          <p>Aliquam sit amet gravida nibh, facilisis gravida odio.</p>
+          <h2 class="bordered-title">WOMENS WHOLESALE FASHION</h2>
+          <p class="bordered-paragraph">Find all of our NEW stock here at Influence, all designed in-house and made in our own factories.</p>
         </div>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item active">
         <img class="d-block w-100" src="./images/slider/slider-winter.gif" alt="">
         <div class="carousel-caption">
-          <h2>Third slide label</h2>
-          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+          <h2 class="bordered-title">NEW ARRIVALS</h2>
+          <p class="bordered-paragraph">Shop the best prices & designs now!</p>
         </div>
       </div>
     </div>
@@ -86,12 +87,12 @@
         <img class="category" src="./images/women/faux-fur-scarf.jpg" alt="faux-fur-scarf">
       </section>
       <div>
-        <h2>Fall Into The New</h2>
+        <h2 class="title">FALL INTO THE NEW</h2>
         <p>It's everybody's favorite season for stepping out in amazing fits-pretty statement sweaters, sexy denim and
           all the cute shoes and boots. So go ahead-fall in!</p>
       </div>
       <section class="top-offers col-12">
-        <h2 class="title">Top Offers!</h2>
+        <h2 class="title">TOP OFFERS!</h2>
 
         <section class="offers">
 
@@ -229,12 +230,13 @@
       <section class="methods">
         <article class="methods__payment">
           <h3>Payment Methods</h3>
-          <h4>VISA</h4>
-          <h4>MERCADOPAGO</h4>
+          <img src="./images/visa.svg" alt="visa" style="width: 80px;">
+          <img src="./images/mercado-pago.svg" alt="mercado-pago" style="width: 120px;">
         </article>
+        <br>
         <article class="methods_shipping">
           <h3>Shipping</h3>
-          <h4>CORREO ARGENTINO</h4>
+          <img src="./images/correo-argentino.png" alt="correo-argentino"  style="width: 110px;">
         </article>
       </section>
       <section class="social">
