--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -38,7 +38,7 @@
   <h1 class="clipped">Cheapestore</h1>
   <div class="container">
     <main>
-      <h2 class="title">Contact</h2>
+      <h2 class="title">CONTACT</h2>
       <div>
         <section class="contact">
             <form class="contact__form" action="" method="post">
@@ -62,7 +62,7 @@
             <div class="contact__address">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1737.6221882978507!2d-98.48650795000005!3d29.421653200000023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865c58aa57e6a56f%3A0xf08a9ad66f03e879!2sHenry+B.+Gonzalez+Convention+Center!5e0!3m2!1sen!2sus!4v1393884854786"
-                width="500" height="350" frameborder="0" style="border:0"></iframe>
+                ></iframe>
             </div>
 
         </section>
@@ -74,12 +74,13 @@
       <section class="methods">
         <article class="methods__payment">
           <h3>Payment Methods</h3>
-          <h4>VISA</h4>
-          <h4>MERCADOPAGO</h4>
+          <img src="../images/visa.svg" alt="visa" style="width: 80px;">
+          <img src="../images/mercado-pago.svg" alt="mercado-pago" style="width: 120px;">
         </article>
+        <br>
         <article class="methods_shipping">
           <h3>Shipping</h3>
-          <h4>CORREO ARGENTINO</h4>
+          <img src="../images/correo-argentino.png" alt="correo-argentino"  style="width: 110px;">
         </article>
       </section>
       <section class="social">
